--- a/player.html
+++ b/player.html
@@ -138,8 +138,8 @@
 </table>
 
 <script>
-  var serviceHost = "https://spotify.naush.workers.dev";
-  var spotifyUser = "Naushikha";
+  var serviceHost = "https://spot.hero64876.cloudflare.com";
+  var spotifyUser = "314kogj2wssn5mzd2cxrehbrqhva";
 
   var songData, progressSeconds, totalSeconds, progressInterval;
 
