--- a/player.html
+++ b/player.html
@@ -138,7 +138,7 @@
 </table>
 
 <script>
-  var serviceHost = "https://spot.hero64876.cloudflare.com";
+  var serviceHost = "https://spotify.hero64876.cloudflare.com";
   var spotifyUser = "314kogj2wssn5mzd2cxrehbrqhva";
 
   var songData, progressSeconds, totalSeconds, progressInterval;
