--- a/player.html
+++ b/player.html
@@ -139,7 +139,7 @@
 
 <script>
   var serviceHost = "https://spotify.hero64876.cloudflare.com";
-  var spotifyUser = "314kogj2wssn5mzd2cxrehbrqhva";
+  var spotifyUser = "Coen";
 
   var songData, progressSeconds, totalSeconds, progressInterval;
 
