--- a/player.html
+++ b/player.html
@@ -138,7 +138,7 @@
 </table>
 
 <script>
-  var serviceHost = "https://spotify.hero64876.cloudflare.com";
+  var serviceHost = "https://spotify.hero64876.workers.dev";
   var spotifyUser = "Coen";
 
   var songData, progressSeconds, totalSeconds, progressInterval;
