font and weight

--- a/player.html
+++ b/player.html
@@ -1,9 +1,13 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 <table
   id="player"
   style="
     background-color: #111;
     color: #fff;
-    font-family: Helvetica, Arial;
+    font-family: Manrope;
+    font-weight: bold;
     font-size: 5vmin;
     border-radius: 10px;
     filter: opacity(0.8);
