cant stop me :)

--- a/player.html
+++ b/player.html
@@ -28,6 +28,53 @@
           id="player-artist"
           style="font-size: 1.3em; margin-bottom: 1em"
         ></div>
+        <a
+          id="player-song-link"
+          href=""
+          target="_blank"
+          style="
+            color: #fff;
+            text-decoration: none;
+            border: 0px solid #fff;
+            border-radius: 10px;
+          "
+        ></a>
+        <a
+          id="player-artist-link"
+          href=""
+          target="_blank"
+          style="
+            color: #fff;
+            text-decoration: none;
+            border: 0px solid #fff;
+            border-radius: 10px;
+          "
+        ></a
+        >
+        <a
+          id="player-album-link"
+          href=""
+          target="_blank"
+          style="
+            color: #fff;
+            text-decoration: none;
+            border: 0px solid #fff;
+            border-radius: 10px;
+          "
+        ></a
+        >
+        <a
+          id="player-mp3-link"
+          href=""
+          target="_blank"
+          style="
+            color: #fff;
+            text-decoration: none;
+            border: 0px solid #fff;
+            border-radius: 10px;
+          "
+        ></a
+        >
         <div id="player-status" style="margin: 2em 0 1em 0"></div>
         <div
           id="player-time"
